--- a/templates/header.html
+++ b/templates/header.html
@@ -1,42 +1,46 @@
 <div id="he" class="main-panel" ng-controller="HomeCtrl">
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-brand navbar-absolute fixed-top ">
-        <div class="container-fluid">
-            <div class="navbar-wrapper">
-                <a class="navbar-brand" href="" ng-click="addheader()">
-                    <i class="material-icons">person_add</i>
-                    <h4 class="title" style="display:inline-block; vertical-align: text-top;">Thêm học viên</h4>
-                </a>
-                <a class="navbar-brand" href="" ng-click="addheaderUser()">
-                    <i class="material-icons">face</i>
-                    <h4 class="title" style="display:inline-block; vertical-align: text-top;">Thêm User</h4>
-                </a>
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-brand navbar-absolute fixed-top ">
+            <div class="container-fluid">
+                <div class="navbar-wrapper">
+                    <a class="navbar-brand" href="" ng-click="addheader()">
+                        <i class="material-icons">person_add</i>
+                        <h4 class="title" style="display:inline-block; vertical-align: text-top;">Thêm học viên</h4>
+                    </a>
+                    <a class="navbar-brand" href="" ng-click="go_manageruser()" ng-if="auth.Role[0].id === 0">
+                        <i class="material-icons">face</i>
+                        <h4 class="title" style="display:inline-block; vertical-align: text-top;">Quản lý Users</h4>
+                    </a>
+                    <a class="navbar-brand" href="" ng-click="go_managergroup()" ng-if="auth.Role[0].id === 0">
+                        <i class="material-icons">group</i>
+                        <h4 class="title" style="display:inline-block; vertical-align: text-top;">Quản lý Groups</h4>
+                    </a>
+                </div>
+                <div class="collapse navbar-collapse justify-content-end">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="" ng-click="updateheaderUser()">
+                                <i class="material-icons">person</i>
+                                <p class="d-lg-none d-md-block">
+                                    Account
+                                </p>
+                                {{auth.Fullname}}
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="" ng-click="logout()">
+                                <i class="material-icons">exit_to_app</i>
+                                Thoát
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="collapse navbar-collapse justify-content-end">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="" ng-click="updateheaderUser()">
-                            <i class="material-icons">person</i>
-                            <p class="d-lg-none d-md-block">
-                                Account
-                            </p>
-                            {{auth.Fullname}}
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="" ng-click="logout()">
-                            <i class="material-icons">exit_to_app</i>
-                            Thoát
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- End Navbar -->
+        </nav>
+        <!-- End Navbar -->
     
-</div>
-<!-- modal -->
-<!-- <div ng-include='"templates/update.html"'></div> -->
-<!-- <div ng-include='"templates/add.html"'></div> -->
-<!-- <div ng-include='"templates/user.html"'></div> -->
+    </div>
+    <!-- modal -->
+    <!-- <div ng-include='"templates/update.html"'></div> -->
+    <!-- <div ng-include='"templates/add.html"'></div> -->
+    <!-- <div ng-include='"templates/user.html"'></div> -->
