--- a/templates/leftmenu.html
+++ b/templates/leftmenu.html
@@ -1,15 +1,19 @@
-<div id="si" ng-controller="MenuCtrl" class="sidebar" data-color="purple" data-background-color="white" data-image="../assets/img/sidebar-1.jpg">
-    <!--
-      Tip 1: You can change the color of the sidebar using: data-color="purple | azure | green | orange | danger"
+<div id="si" ng-controller="MenuCtrl" class="sidebar" data-color="azure" data-background-color="white" data-image="../assets/img/sidebar-1.jpg">
 
-      Tip 2: you can also add an image using data-image tag
-  -->
     <div class="logo">
-        <a href="#" class="simple-text logo-normal">
+        <a href="#" class="simple-text logo-normal" ng-if="auth.Role[0].id === 1">
             SAS TELESALES
         </a>
+
+        <a href="#" class="simple-text logo-normal" ng-if="auth.Role[0].id === 2">
+            SAS MAKERTING
+        </a>
+
+        <a href="#" class="simple-text logo-normal" ng-if="auth.Role[0].id === 0">
+            SAS
+        </a>
     </div>
-    <div class="sidebar-wrapper" style="padding-bottom: 0px">
+    <div class="sidebar-wrapper" style="padding-bottom: 0px" ng-if="auth.Role[0].id === 1">
         <ul class="nav" style="margin-top:0px">
             <li class="nav-item" ng-click="go_home()" ng-class="{'active': isactive === 1}">
                 <a class="nav-link" href="">
@@ -65,12 +69,30 @@
                     <p>Setup</p>
                 </a>
             </li>
-            <!-- <li class="nav-item active-pro ">
-              <a class="nav-link" href="./upgrade.html">
-                  <i class="material-icons">unarchive</i>
-                  <p>Upgrade to PRO</p>
-              </a>
-          </li> -->
+        </ul>
+    </div>
+
+
+    <div class="sidebar-wrapper" style="padding-bottom: 0px" ng-if="auth.Role[0].id === 2">
+        <ul class="nav" style="margin-top:0px">
+            <li class="nav-item" ng-click="go_thongke()" ng-class="{'active': isactive === 10}">
+                <a class="nav-link" href="">
+                    <i class="material-icons">bar_chart</i>
+                    <p>Thống Kê</p>
+                </a>
+            </li>
+            <li class="nav-item" ng-click="go_danhsach()" ng-class="{'active': isactive === 11}">
+                <a class="nav-link" href="">
+                    <i class="material-icons">view_list</i>
+                    <p>Danh Sách</p>
+                </a>
+            </li>
+            <li class="nav-item" ng-click="go_msetup()" ng-class="{'active': isactive === 12}">
+                <a class="nav-link" href="">
+                    <i class="material-icons">settings</i>
+                    <p>Setup</p>
+                </a>
+            </li>
         </ul>
     </div>
 </div>
